force-app/main/default/objects/TTC_records__c/TTC_records__c.object-meta.xml
<CustomObject>
    <label>Technical Team Collaboration</label>
    <nameField>
        <displayFormat>TTC-{00000}</displayFormat>
        <label>Technical Team Collaboration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TTC records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>