force-app/main/default/objects/TTC_records__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TTC records</relationshipLabel>
    <relationshipName>TTC_records</relationshipName>
    <type>Lookup</type>
</CustomField>