force-app/main/default/objects/TTC_records__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>TTC records</relationshipLabel>
    <relationshipName>TTC_records</relationshipName>
    <type>Lookup</type>
</CustomField>