force-app/main/default/objects/TTC_records__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>TTC records</relationshipLabel>
    <relationshipName>TTC_records</relationshipName>
    <type>Lookup</type>
</CustomField>