force-app/main/default/objects/TTC_records__c/validationRules/TTC_text_areas_blank_validation_error.validationRule-meta.xml
<ValidationRule>
    <fullName>TTC_text_areas_blank_validation_error</fullName>
    <active>true</active>
    <description>TTC_text_areas_blank_validation_error</description>
    <errorConditionFormula>AND(OR(ISBLANK(Scope__c), ISBLANK(Technical_information_needed__c ), ISBLANK(Engagement_Summary__c), ISBLANK(TEXT(Environment__c) )),
ISPICKVAL( Collaboration_Type__c , &quot;Version Update&quot;))</errorConditionFormula>
    <errorMessage>Scope,Technical_information_needed, Engagement_Summary &amp; Environment__c cannot be blank</errorMessage>
</ValidationRule>